@@ -7,6 +7,7 @@
 * Better RubyGems support thanks to added env she-bang to mongrel_rails executable.
 * Fixed proper version reporting under 1.9
 * Consider MinGW as valid Windows platform.
+* Smartly load http11 extension using fat-binary approach.
 
 === 1.1.5 / 2008-05-22
 
